css/style.css
/******************************************************************
  Template Name: Manup
  Description: Manup Event HTML Template
  Author: Colorlib
  Author URI: http://colorlib.com
  Version: 1.0
  Created: Colorlib
******************************************************************/

/*------------------------------------------------------------------
[Table of contents]

1.  Template default CSS
	1.1	Variables
	1.2	Mixins
	1.3	Flexbox
	1.4	Reset
2.  Helper Css
3.  Header Section
4.  Hero Section
5.  Home About Section
6.  Team Member Section
7.  Pricing Section
8.  Latest Blog Section
9.  Contact
10.  Footer Style

-------------------------------------------------------------------*/

/*----------------------------------------*/

/* Template default CSS
/*----------------------------------------*/

html,
body {
	height: 100%;
	font-family: "Work Sans", sans-serif;
	-webkit-font-smoothing: antialiased;
	font-smoothing: antialiased;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0;
	color: #111111;
	font-weight: 400;
	font-family: "Work Sans", sans-serif;
}

h1 {
	font-size: 70px;
}

h2 {
	font-size: 36px;
}

h3 {
	font-size: 30px;
}

h4 {
	font-size: 24px;
}

h5 {
	font-size: 18px;
}

h6 {
	font-size: 16px;
}

p {
	font-size: 16px;
	font-family: "Work Sans", sans-serif;
	color: #6a6b7c;
	font-weight: 400;
	line-height: 28px;
	margin: 0 0 15px 0;
}

img {
	max-width: 100%;
}

input:focus,
select:focus,
button:focus,
textarea:focus {
	outline: none;
}

a:hover,
a:focus {
	text-decoration: none;
	outline: none;
	color: #fff;
}

ul,
ol {
	padding: 0;
	margin: 0;
}

/*---------------------
  Helper CSS
-----------------------*/

.section-title {
	text-align: center;
	margin-bottom: 52px;
}

.section-title h2 {
	font-size: 40px;
	font-weight: 700;
	color: #171822;
	margin-bottom: 10px;
}

.section-title p {
	font-size: 18px;
	color: #6a6b7c;
	margin-bottom: 0;
}

.set-bg {
	background-repeat: no-repeat;
	background-size: cover;
	background-position: top center;
}

.spad {
	padding-top: 100px;
	padding-bottom: 100px;
}

.spad-2 {
	padding-top: 50px;
	padding-bottom: 70px;
}

.text-white h1,
.text-white h2,
.text-white h3,
.text-white h4,
.text-white h5,
.text-white h6,
.text-white p,
.text-white span,
.text-white li,
.text-white a {
	color: #fff;
}

.bg-gradient,
.bd-text .bd-tag-share .s-share a:hover,
.bh-text .play-btn,
.schedule-table-tab .nav-tabs .nav-item .nav-link.active,
.newslatter-inner .ni-form button,
.latest-item .li-tag,
.price-item .price-btn:hover,
.price-item .pi-price,
.price-item .tr-tag,
.schedule-tab .nav-tabs .nav-item .nav-link.active,
.site-btn {
	background-image: -o-linear-gradient(330deg, #ee8425 0%, #f9488b 100%), -o-linear-gradient(330deg, #ee8425 0%, #f9488b 100%);
	background-image: linear-gradient(120deg, #ee8425 0%, #f9488b 100%), linear-gradient(120deg, #ee8425 0%, #f9488b 100%);
}

/* buttons */

.primary-btn {
	display: inline-block;
	font-size: 16px;
	font-weight: 600;
	padding: 12px 40px;
	color: #ffffff;
	text-align: center;
	border-radius: 50px;
	background-image: -webkit-gradient(linear, left top, right top, from(#ee8425), to(#f9488b)), -webkit-gradient(linear, left top, right top, from(#ee8425), to(#f9488b));
	background-image: -o-linear-gradient(left, #ee8425 0%, #f9488b 100%), -o-linear-gradient(left, #ee8425 0%, #f9488b 100%);
	background-image: linear-gradient(to right, #ee8425 0%, #f9488b 100%), linear-gradient(to right, #ee8425 0%, #f9488b 100%);
}

.site-btn {
	font-size: 16px;
	color: #ffffff;
	font-weight: 600;
	border: none;
	padding: 10px 40px 12px;
	border-radius: 50px;
}

/* Preloder */

#preloder {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	z-index: 999999;
	background: #000;
}

.loader {
	width: 40px;
	height: 40px;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: -13px;
	margin-left: -13px;
	border-radius: 60px;
	animation: loader 0.8s linear infinite;
	-webkit-animation: loader 0.8s linear infinite;
}

@keyframes loader {
	0% {
		-webkit-transform: rotate(0deg);
		transform: rotate(0deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
	50% {
		-webkit-transform: rotate(180deg);
		transform: rotate(180deg);
		border: 4px solid #673ab7;
		border-left-color: transparent;
	}
	100% {
		-webkit-transform: rotate(360deg);
		transform: rotate(360deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
}

@-webkit-keyframes loader {
	0% {
		-webkit-transform: rotate(0deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
	50% {
		-webkit-transform: rotate(180deg);
		border: 4px solid #673ab7;
		border-left-color: transparent;
	}
	100% {
		-webkit-transform: rotate(360deg);
		border: 4px solid #f44336;
		border-left-color: transparent;
	}
}

/*---------------------
  Header
-----------------------*/

.header-section {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
}

.header-section.header-normal {
	border-bottom: 1px solid #e5e5e5;
}

.logo {
	float: left;
	padding-top: 36px;
	padding-bottom: 37px;
}

.logo a {
	display: inline-block;
}

.nav-menu {
	float: right;
}

.nav-menu .mainmenu {
	display: inline-block;
}

.nav-menu .mainmenu ul li {
	display: inline-block;
	list-style: none;
	margin-right: 40px;
	position: relative;
}

.nav-menu .mainmenu ul li .dropdown {
	position: absolute;
	width: 180px;
	background: #ffffff;
	z-index: 99;
	left: 0;
	top: 130px;
	opacity: 0;
	visibility: hidden;
	-webkit-box-shadow: 4px 13px 30px rgba(0, 0, 0, 0.15);
	box-shadow: 4px 13px 30px rgba(0, 0, 0, 0.15);
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
}

.nav-menu .mainmenu ul li .dropdown li {
	display: block;
	margin-right: 0;
}

.nav-menu .mainmenu ul li .dropdown li a {
	padding: 8px 10px;
	display: block;
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
	text-transform: capitalize;
}

.nav-menu .mainmenu ul li .dropdown li a:hover {
	color: #f44949;
}
/* ... */

